--- a/vignettes/simulation_study.Rmd
+++ b/vignettes/simulation_study.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Conduct a simulation study"
-author: "Matt Secrest and Isaac Gravestock"
+author: "Matt Secrest, Yichen Lu, Isaac Gravestock"
 output:
   rmarkdown::html_vignette:
     toc: true
@@ -19,21 +19,39 @@ knitr::opts_chunk$set(
 options(rmarkdown.html_vignette.check_title = FALSE)
 ```
 
-
 In this vignette, you'll learn how to use `psborrow2` to create a
-simulation study which will help inform trial design. Let's start by
+simulation study with the goal of informing trial design. Let's start by
 loading `psborrow2`:
 
 ```{r setup}
 library(psborrow2)
 ```
 
+# Executing a single simulation
 
-## Simulate covariates
+We'll start by showing how to conduct a simulation study with a single
+set of study parameters, and will show how to combine and compare
+different iterations of study parameters later.
 
-We will then start by specifying the sample size for internal control,
-external control, and internal treatment arms to be 200, 400, and 180,
-respectively, using the function `sim_samplesize()`.
+To execute a simulation study with a single set of study parameters,
+we need to build an object of class `Simulation` using the function
+`create_simulation_obj()`. Let's look at the arguments to
+`create_simulation_obj()` and consider them one-by-one below:
+
+```
+create_simulation_obj(
+  sample_size,
+  covariates
+)
+
+```
+
+## sample_size
+
+The input to `sample_size` is an object of class `SimSampleSize` created by
+the constructor `sim_samplesize()` which contains information on the sample size
+for internal control, external control, and internal treatment arms.
+We will choose these to be 200, 400, and 180, respectively.
 
 ```{r}
 ss <- sim_samplesize(
@@ -41,4 +59,92 @@ ss <- sim_samplesize(
   n_external_control = 400,
   n_internal_experimental = 180
 )
+ss
 ```
+
+## covariates
+
+The argument `covariates` takes an object of class `SimCovariates` created by
+the constructor `sim_covariates()`. Let's create two binary covariates ($x_1$
+and $x_2$) and one continuous covariate ($x_3$) from a multivariate
+normal distribution according to a covariance matrix we design.
+We show the multivariate normal distribution for the internal arms below and
+assume they are equal between internal and external arms, though users may
+specify separate matrices if they prefer.
+
+***Note*** the covariance matrix refers to the covariance before binarization
+of the binary variables. The true covariance may differ after sampling.
+
+$$\begin{aligned}
+\begin{bmatrix}
+x_1\\x_2\\x_3\\
+\end{bmatrix}
+&\sim N \left( \begin{bmatrix} 0\\ 0 \\0.5 \end{bmatrix},
+\begin{bmatrix}
+1 & 0.5 & 0.7\\
+0.5 & 1.2 & 0.9\\
+0.7 & 0.9 & 1\\
+\end{bmatrix} \right)
+\end{aligned}$$
+
+Before we go any further, let's codify our covariance matrix in `R` for future
+reference:
+
+```{r}
+cov_mat <- matrix(
+  c(
+    1.0, 0.5, 0.7,
+    0.5, 1.2, 0.9,
+    0.7, 0.9, 1.0
+  ),
+  ncol = 3,
+  byrow = TRUE
+)
+cov_mat
+```
+
+$x_1$ and $x_2$ are further converted to binary variables $x_1$ and $x_2$ using
+quantiles of the normal distribution calculated from the probability specified
+by `prob_internal` for the internal trial and by `prob_external` for
+the external data. We specify probabilities for each binary covariate
+below:
+
+$$
+\begin{aligned}
+  \text{internal: Pr} (X_1 = 1) &= 0.45 \\
+  \text{Pr}(X_2 = 1) &= 0.55\\
+  \text{external: Pr} (X_1 = 1) &= 0.65\\
+  \text{Pr}(X_2 = 1) &= 0.55\\
+\end{aligned}
+$$
+
+Let's see what these parameters look like in a function call to
+`sim_covariates()`.
+```{r message=FALSE}
+covset <- sim_covariates(
+  covariates = list(
+    x_1 = bin_var(
+      prob_internal = 0.45,
+      prob_external = 0.65
+    ),
+    x_2 = bin_var(
+      prob_internal = 0.55,
+      prob_external = 0.55
+    ),
+    x_3 = cont_var(
+      mu_internal = 0.5,
+      mu_external = 0.5
+    )
+  ),
+  covariance_internal = cov_mat,
+  covariance_external = cov_mat
+)
+covset
+```
+
+
+# Combining simulations with different parameters
+
+Now that we've seen how to conduct a simulation study with a single set of
+study parameters, let's explore how to combine and compare results
+from simulations with different study parameters.
