minor edits, major suggestions in separate issue

--- a/vignettes/dataset.Rmd
+++ b/vignettes/dataset.Rmd
@@ -7,8 +7,10 @@ output:
     toc_depth: 2
 vignette: >
   %\VignetteIndexEntry{2. Conduct a hybrid control analysis on a dataset using BDB}
-  %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
+  %\VignetteEngine{knitr::rmarkdown}
+editor_options: 
+  chunk_output_type: console
 ---
 
 ```{r knitr, include = FALSE}
@@ -39,7 +41,7 @@ library(cmdstanr)
 ```
 
 As explained in the
-[`cmstanr` vignette](https://mc-stan.org/cmdstanr/articles/cmdstanr.html),
+[`cmdstanr` vignette](https://mc-stan.org/cmdstanr/articles/cmdstanr.html),
 installing the `cmdstanr` R package does not install the underlying CMD Stan
 program we need. To install CMD Stan, we will call the `cmdstanr` function
 `install_cmdstan()`:
@@ -65,27 +67,29 @@ create_analysis_obj(
 )
 ```
 
-## 1. data_matrix {.tabset}
+## 1. `data_matrix` {.tabset}
 
 ### Required elements
 
 `data_matrix` is where we input the one-row-per-patient data matrix for our
 analysis. There are two columns required for all analyses:
 
-* A flag denoting receipt of the experimental intervention (`1`) or not (`0`)
+* A flag denoting receipt of the experimental intervention (`1`) or not (`0`).
 * A flag denoting whether the patient was part of the external data source
 (`1`) or the internal trial (`0`).
 
-#### Time to event
+#### Time-to-event
+
 If the outcome is time-to-event, then two additional columns are needed:
 
-* The duration of follow-up for each patient
-* A flag denoting the patient was censored (`1`) or not (`0`)
+* The duration of follow-up for each patient.
+* A flag denoting whether the patient was censored (`1`) or not (`0`).
 
 #### Binary endpoints
-If the outcome is binary, one additional column is needed
 
-* A flag denoting a patient had the event of interest (`1`) or not (`0`)
+If the outcome is binary, one additional column is needed:
+
+* A flag denoting whether a patient had the event of interest (`1`) or not (`0`).
 
 #### Covariates
 
@@ -99,7 +103,7 @@ in the data matrix if the plan is to adjust for them.
 ### Example data
 
 We will be using an example dataset stored in `psborrow2`
-(`psborrow2::example_matrix`). If you are starting from a data frame or tibble,
+(`example_matrix`). If you are starting from a data frame or tibble,
 you can easily create a suitable matrix with the `psborrow2` helper function
 [`create_data_matrix()`].
 
@@ -115,20 +119,20 @@ The column definitions are below:
 * `trt`, 0/1, flag for treatment arm
 * `cov1`, 0/1, a baseline covariate
 * `cov2`, 0/1, a baseline covariate
-* `time`, 0/1, numeric >0, survival time
+* `time`, positive numeric, survival time
 * `cnsr`, 0/1, censoring indicator
 * `resp`, 0/1, indicator for binary response outcome
 
-## 2. outcome
+## 2. `outcome`
 
 `psborrow2` currently supports three outcomes:
 
-* Time to event with exponential distribution (constant hazard), created with
-`exp_surv_dist()`
-* Time to event with Weibull distribution and proportional hazards
-parametrization, created with `weib_ph_surv_dist()`
-* Binary endpoints with a bernoulli distribution (logistic regression),
-created with `logistic_bin_outcome()`
+* Time-to-event with exponential distribution (constant hazard), created with
+`exp_surv_dist()`.
+* Time-to-event with Weibull distribution and proportional hazards
+parametrization, created with `weib_ph_surv_dist()`.
+* Binary endpoints with a Bernoulli distribution and using logistic regression,
+created with `logistic_bin_outcome()`.
 
 For our example, let's conduct a time-to-event analysis using the exponential
 distribution.
@@ -142,20 +146,21 @@ outcome <- exp_surv_dist(
 outcome
 ```
 
-## 3. borrowing
+## 3. `borrowing`
 
-`psborrow2` support three different borrowing methods which are specified in
-the `method` argument of `borrowing_details()`.
+`psborrow2` supports three different borrowing methods which are specified in
+the `method` argument of `borrowing_details()` (see the code example below
+how to call it):
 
-* "No borrowing", this is the internal trial comparison without any external
-data
-* "Full borrowing", this is pooling of the external and internal control arms
-* "BDB", Bayesian dynamic borrowing
+* "No borrowing": This is the internal trial comparison without any external
+data.
+* "Full borrowing": This is pooling of the external and internal control arms.
+* "BDB": Bayesian dynamic borrowing.
 
 In addition to specifying the method, we need to specify a prior distribution
 for the baseline event rate, `baseline_prior`. In this case, `baseline_prior` is
-a log hazard rate (for binary endpoints, this represents the log
-odds). Let's assume we have no prior knowledge on this event rate, so we'll
+a log hazard rate (for binary endpoints this represents the log
+odds instead). Let's assume we have no prior knowledge on this event rate, so we'll
 specify an uninformative prior: `normal_prior(0, 1000)`.
 
 The column name for the external control column flag in our matrix
@@ -168,14 +173,14 @@ between internal and external controls) how much borrowing of the external
 control group will be performed. Example hyperpriors include largely
 uninformative inverse gamma distributions
 e.g., `gamma_prior(alpha = .001, beta = .001)` as well as more
-informative distributions e.g., `gamma_prior(alpha = 1, beta = .001`),
-though any distribution $x \in (0, \infty)$ can be used. Distributions
-with more density at higher values of $x$ (i.e., higher precision)
+informative distributions e.g., `gamma_prior(alpha = 1, beta = .001)`,
+though any distribution on the positive real line can be used. Distributions
+with more density at higher values (i.e., higher precision)
 will lead to more borrowing. We'll choose an uninformative gamma prior
 in this example.
 
 ***Note***: Prior distributions are outlined in greater detail in a separate
-vignette, `vignette('prior_distributions', package = 'psborrow2')`
+vignette, see `vignette('prior_distributions', package = 'psborrow2')`.
 
 ```{r borrowing-details}
 borrowing <- borrowing_details(
@@ -186,7 +191,7 @@ borrowing <- borrowing_details(
 borrowing
 ```
 
-## 3. treatment
+## 3. `treatment`
 
 Finally, treatment details are outlined in `treatment_details()`. Here, we first
 specify the column for the treatment flag in `trt_flag_col`. In addition, we
@@ -225,9 +230,10 @@ distribution using the function `mcmc_sample()`. This function takes as input
 our `Analysis` object and any arguments (other than the `data` argument)
 that are passed to
 [`CmdStanModel` objects](https://mc-stan.org/cmdstanr/reference/model-method-sample.html).
+Note that depending on your computer running this will take a few minutes.
 
 ```{r res}
-res <- mcmc_sample(anls_obj,
+results <- mcmc_sample(anls_obj,
   iter_warmup = 2000,
   iter_sampling = 50000,
   chains = 4,
@@ -237,14 +243,14 @@ res <- mcmc_sample(anls_obj,
 
 # Summarizing results{.tabset}
 
-As a `CmdStanMCMC` object, `res` has several methods which are outlined on
+As a `CmdStanMCMC` object, `results` has several methods which are outlined on
 the
 [`cmdstanr` website](https://mc-stan.org/cmdstanr/reference/CmdStanModel.html).
 For instance, we can see a see a summary of the posterior distribution samples
-with `res$summary()`:
+with `results$summary()`:
 
 ```{r res-summary}
-res$summary()
+results$summary()
 ```
 
 The summary includes information for several parameter estimates
@@ -256,13 +262,13 @@ variable dictionary from the analysis object to help interpret these parameters:
 variable_dictionary(anls_obj)
 ```
 
-We can also capture all of the draws with the function `res$draws()`, which
+We can also capture all of the draws by calling `results$draws()`, which
 returns an object of class `draws`. `draws` objects are
 common in many MCMC sampling software packages and allow us to leverage
 packages such as `posterior` and `bayesplot`.
 
 ```{r draws}
-draws <- res$draws()
+draws <- results$draws()
 print(draws)
 ```
 
@@ -270,9 +276,9 @@ print(draws)
 objects to be more interpretable, which could be called with e.g.,
 `draws <- rename_draws_covariates(draws)`.
 
-## bayesplot
+## Using `bayesplot`
 
-With `draws` objects and `bayesplot`, we can create many useful visual summary
+With `draws` objects and the `bayesplot` package, we can create many useful visual summary
 plots. We can visualize the marginal posterior distribution of a
 variable we are interested in by plotting histograms of the draws with the
 function `mcmc_hist()`. Let's do that for the Hazard ratio for the treatment
@@ -295,20 +301,21 @@ mcmc_trace(draws,
 ```
 
 Many other functions are outlined in the
-[`bayesplot` vignettes](https://mc-stan.org/bayesplot/)
+[`bayesplot` vignettes](https://mc-stan.org/bayesplot/).
 
-## posterior
+## Using `posterior`
 
 `draws` objects are also supported by the `posterior` package,
 which provides many other tools for analyzing MCMC draw data. For instance, we
-can use `posterior` to derive 80% credible intervals for all parameters:
+can use the `summarize_draws()` function to derive 80% credible intervals
+for all parameters:
 
 ```{r posterior-summ, message = FALSE}
 library(posterior)
 summarize_draws(draws, ~ quantile(.x, probs = c(0.1, 0.9)))
 ```
 
-Another useful application of `posterior` is the evaluation of Monte Carlo
+Another useful application of the `posterior` package is the evaluation of the Monte Carlo
 standard error for quantiles of a variable of interest:
 
 ```{r mcse-mean}
@@ -316,5 +323,5 @@ vm <- extract_variable_matrix(draws, "HR_trt")
 mcse_quantile(x = vm, probs = c(0.1, 0.5, 0.9))
 ```
 
-`posterior` contains many other helpful functions, as outlined on their
+`posterior` contains many other helpful functions, as outlined in their
 [vignettes](https://cran.r-project.org/web/packages/posterior/vignettes/posterior.html).
