--- a/vignettes/dataset.Rmd
+++ b/vignettes/dataset.Rmd
@@ -9,7 +9,7 @@ vignette: >
   %\VignetteIndexEntry{2. Conduct a hybrid control analysis on a dataset using BDB}
   %\VignetteEncoding{UTF-8}
   %\VignetteEngine{knitr::rmarkdown}
-editor_options: 
+editor_options:
   chunk_output_type: console
 ---
 
@@ -26,37 +26,40 @@ options(rmarkdown.html_vignette.check_title = FALSE)
 ```
 
 In this vignette, you'll learn how to conduct Bayesian dynamic borrowing (BDB)
-analyses on data using `psborrow2`.
+analyses using `psborrow2`.
 
-# Load dependencies and setup CMD Stan
+# Before you start
 
-We'll start by loading dependencies. `psborrow2` relies on the package
-[`cmdstanr`](https://mc-stan.org/cmdstanr/index.html),
-so we'll load [`cmdstanr`](https://mc-stan.org/cmdstanr/index.html)
-as well.
+The `psborrows2` package relies on [`Stan`](https://mc-stan.org/) for model fitting,
+specifically via the [`CmdStan`](https://mc-stan.org/users/interfaces/cmdstan.html)
+and [`cmdstanr`](https://mc-stan.org/cmdstanr/) tools.
 
-```{r dependencies, message = FALSE}
-library(psborrow2)
-library(cmdstanr)
-```
+If you haven't used `CmdStan` before you'll need to install the R package
+and the external program. More information can be found in the
+[`cmdstanr` vignette](https://mc-stan.org/cmdstanr/articles/cmdstanr.html).
 
-As explained in the
-[`cmdstanr` vignette](https://mc-stan.org/cmdstanr/articles/cmdstanr.html),
-installing the `cmdstanr` R package does not install the underlying CMD Stan
-program we need. To install CMD Stan, we will call the `cmdstanr` function
-`install_cmdstan()`:
-
+The short version is:
 ```{r install-cmdstan-2, eval=FALSE}
-set_cmdstan_path(path = "/root/.cmdstan")
+# Install the cmdstanr package
+install.packages("cmdstanr", repos = c("https://mc-stan.org/r-packages/", getOption("repos")))
+library(cmdstanr)
+
+# Install the external CmdStan program
+check_cmdstan_toolchain()
 install_cmdstan(cores = 2)
 ```
 
+Now you're ready to start with `psborrow2`.
+```{r dependencies, message = FALSE}
+library(psborrow2)
+```
+
 # Creating an analysis object {.tabset}
-For an analysis on data in `psborrow2`, we need to create an object
+For a BDB analysis in `psborrow2`, we need to create an object
 of class `Analysis` which contains all the information needed to build a model
 and compile an MCMC sampler using Stan. To create an `Analysis` object,
-we need to call the function `create_analysis_obj()`. Let's look at the four
-required arguments to this function and evaluate them one at a time.
+we will call the function `create_analysis_obj()`. Let's look at the four
+required arguments to this function and evaluate them one-at-a-time.
 
 ```
 create_analysis_obj(
@@ -71,32 +74,36 @@ create_analysis_obj(
 
 ### Required elements
 
-`data_matrix` is where we input the one-row-per-patient data matrix for our
-analysis. There are two columns required for all analyses:
+`data_matrix` is where we input the one-row-per-patient `numeric` matrix for our
+analysis. The column names of the matrix are not fixed, so the names of columns
+will be specified in the outcome, treatment, and borrowing sections.
 
-* A flag denoting receipt of the experimental intervention (`1`) or not (`0`).
+There are two columns required for all analyses:
+
+* A flag denoting receipt of the experimental intervention (`1`) or not (`0`)
 * A flag denoting whether the patient was part of the external data source
-(`1`) or the internal trial (`0`).
+(`1`) or the internal trial (`0`)
 
 #### Time-to-event
 
 If the outcome is time-to-event, then two additional columns are needed:
 
-* The duration of follow-up for each patient.
-* A flag denoting whether the patient was censored (`1`) or not (`0`).
+* The duration of follow-up for each patient
+* A flag denoting whether the patient was censored (`1`) or not (`0`)
 
 #### Binary endpoints
 
 If the outcome is binary, one additional column is needed:
 
-* A flag denoting whether a patient had the event of interest (`1`) or not (`0`).
+* A flag denoting whether a patient had the event of interest (`1`) or not (`0`)
 
 #### Covariates
 
 Covariates may also be included in BDB analyses. These should be included
 in the data matrix if the plan is to adjust for them.
 
-***Note*** R data frames are not allowed, only matrices.
+***Note*** Only `numeric` matrices are supported. See [Example data] for creating such a matrix
+from a `data.frame`.
 
 ***Note*** No missing data is currently allowed, all values must be non-missing.
 
@@ -105,8 +112,31 @@ in the data matrix if the plan is to adjust for them.
 We will be using an example dataset stored in `psborrow2`
 (`example_matrix`). If you are starting from a data frame or tibble,
 you can easily create a suitable matrix with the `psborrow2` helper function
-[`create_data_matrix()`].
+`create_data_matrix()`.
 
+#### Creating a data matrix with `create_data_matrix()`
+```{r, eval = require(survival)}
+# Start with data.frame
+diabetic_df <- survival::diabetic
+
+# For demonstration purposes, let some patients be external controls
+diabetic_df$external <- ifelse(diabetic_df$trt == 0 & diabetic_df$id > 1000, 1, 0)
+
+# Create the censor flag
+diabetic_df$cens <- ifelse(diabetic_df$status == 0, 1, 0)
+
+diabetes_matrix <- create_data_matrix(
+  diabetic_df,
+  outcome = c("time", "cens"),
+  trt_flag_col = "trt",
+  ext_flag_col = "external",
+  covariates = ~ age + laser + risk
+)
+
+head(diabetes_matrix)
+```
+
+#### `psborrow2` example matrix
 Let's look at the first few rows of the example matrix:
 
 ```{r example-matrix}
@@ -128,11 +158,18 @@ The column definitions are below:
 `psborrow2` currently supports three outcomes:
 
 * Time-to-event with exponential distribution (constant hazard), created with
-`exp_surv_dist()`.
+`exp_surv_dist()`
 * Time-to-event with Weibull distribution and proportional hazards
-parametrization, created with `weib_ph_surv_dist()`.
+parametrization, created with `weib_ph_surv_dist()`
 * Binary endpoints with a Bernoulli distribution and using logistic regression,
-created with `logistic_bin_outcome()`.
+created with `logistic_bin_outcome()`
+
+After we select which outcome and distribution we want,
+we need to specify a prior distribution for the baseline event rate,
+`baseline_prior`. In this case, `baseline_prior` is
+a log hazard rate (for binary endpoints this represents the log
+odds instead). Let's assume we have no prior knowledge on this event rate,
+so we'll specify an uninformative prior: `normal_prior(0, 1000)`.
 
 For our example, let's conduct a time-to-event analysis using the exponential
 distribution.
@@ -153,22 +190,16 @@ the `method` argument of `borrowing_details()` (see the code example below
 how to call it):
 
 * "No borrowing": This is the internal trial comparison without any external
-data.
-* "Full borrowing": This is pooling of the external and internal control arms.
-* "BDB": Bayesian dynamic borrowing.
-
-In addition to specifying the method, we need to specify a prior distribution
-for the baseline event rate, `baseline_prior`. In this case, `baseline_prior` is
-a log hazard rate (for binary endpoints this represents the log
-odds instead). Let's assume we have no prior knowledge on this event rate, so we'll
-specify an uninformative prior: `normal_prior(0, 1000)`.
+data
+* "Full borrowing": This is pooling of the external and internal control arms
+* "BDB": Bayesian dynamic borrowing
 
 The column name for the external control column flag in our matrix
 is also required and passed to `ext_flag_col`.
 
-Finally, for BDB only,
-the hyperprior distribution on the commensurability parameter must be specified.
-This hyperprior determines (along with the comparability of the outcomes
+Finally, for BDB only, the hyperprior distribution on the commensurability
+parameter must be specified. This hyperprior determines
+(along with the comparability of the outcomes
 between internal and external controls) how much borrowing of the external
 control group will be performed. Example hyperpriors include largely
 uninformative inverse gamma distributions
@@ -230,7 +261,7 @@ distribution using the function `mcmc_sample()`. This function takes as input
 our `Analysis` object and any arguments (other than the `data` argument)
 that are passed to
 [`CmdStanModel` objects](https://mc-stan.org/cmdstanr/reference/model-method-sample.html).
-Note that depending on your computer running this will take a few minutes.
+Note that running this may take a few minutes.
 
 ```{r res}
 results <- mcmc_sample(anls_obj,
@@ -272,9 +303,15 @@ draws <- results$draws()
 print(draws)
 ```
 
-***Note*** `psborrow2` also has a function to rename variables in `draws`
-objects to be more interpretable, which could be called with e.g.,
-`draws <- rename_draws_covariates(draws)`.
+`psborrow2` also has a function to rename variables in `draws`
+objects to be more interpretable, `rename_draws_covariates()`. This function
+uses the `variable_dictionary` labels. Let's use it here to make the results
+easier to interpret:
+
+```{r rename-draws}
+draws <- rename_draws_covariates(draws, anls_obj)
+summary(draws)
+```
 
 ## Using `bayesplot`
 
@@ -286,7 +323,7 @@ effect and for our commensurability parameter, tau.
 
 ```{r mcmc-hist, message = FALSE}
 library(bayesplot)
-mcmc_hist(draws, c("HR_trt", "tau"))
+mcmc_hist(draws, c("treatment HR", "commensurability parameter"))
 ```
 
 We can see other plots that help us understand and diagnose problems with
@@ -294,8 +331,10 @@ the MCMC sampler, such as trace and rank plots:
 
 ```{r mcmc-trace, fig.width=6, fig.height=3.6, dpi = 100}
 color_scheme_set("mix-blue-pink")
-mcmc_trace(draws,
-  pars = c("HR_trt", "tau"),
+
+mcmc_trace(
+  draws[1:5000, 1:2, ], # Using a subset of draws only
+  pars = c("treatment HR", "commensurability parameter"),
   n_warmup = 1000
 )
 ```
@@ -319,7 +358,7 @@ Another useful application of the `posterior` package is the evaluation of the M
 standard error for quantiles of a variable of interest:
 
 ```{r mcse-mean}
-vm <- extract_variable_matrix(draws, "HR_trt")
+vm <- extract_variable_matrix(draws, "treatment HR")
 mcse_quantile(x = vm, probs = c(0.1, 0.5, 0.9))
 ```
 
